# SLEC

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  PLAN_filter_management.md  README.md  index.html
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  lint_and_test.yml
assets/: manifest.json  sw.js  timer.css
docs/plans/: 2026-05-11-countdown-timer-feedback-design.md
locales/: de-DE.yml  en.yml
src/: audio.rs  calculator.rs  languages.rs  main.rs  model.rs  settings.rs  timer.rs
src/components/: back_button.rs  custom_filter.rs  darkmode_toggle.rs  exposure.rs  mod.rs  slider.rs
