[package]
name = "SLEC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.2"
humantime = "2.1.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
"Window", "MediaQueryList"
]
