[package]
name = "SLEC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
gloo-timers = {version="0.3.0", features = ["futures"]}
humantime = "2.1.0"
rust-i18n = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
"Window", "MediaQueryList"
]
