[package]
name = "SLEC"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.7.5"
dioxus-web = "0.7.5"
gloo-console = "0.4.0"
gloo-storage = "0.4.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
humantime = "2.3.0"
rust-i18n = "^4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
  "Window",
  "MediaQueryList",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
